k8s/envs/production-data/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production-data
  labels:
    name: production-data
    environment: production
    plane: data
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
