k8s/envs/production-data/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: neo4j-core
  namespace: production-data
  labels:
    app: neo4j
    role: core
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: http
      port: 7474
      targetPort: 7474
    - name: bolt
      port: 7687
      targetPort: 7687
    - name: discovery
      port: 5000
      targetPort: 5000
    - name: tx
      port: 7000
      targetPort: 7000
  selector:
    app: neo4j
    role: core
---
apiVersion: v1
kind: Service
metadata:
  name: neo4j-read-replica
  namespace: production-data
  labels:
    app: neo4j
    role: read-replica
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: http
      port: 7474
      targetPort: 7474
    - name: bolt
      port: 7687
      targetPort: 7687
  selector:
    app: neo4j
    role: read-replica
